<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ViewService">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="412dp"
                android:layout_height="137dp"
                android:src="@drawable/imgservicios"
                tools:srcCompat="@drawable/imgservicios" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="601dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/tabla1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@drawable/servicios_1" />

                <TextView
                    android:id="@+id/service_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/services_message_one" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@drawable/servicios_2" />

                <TextView
                    android:id="@+id/service_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/services_message_two" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="139dp"
                    android:layout_height="match_parent"
                    tools:srcCompat="@drawable/servicios_3" />

                <TextView
                    android:id="@+id/service_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/services_message_three" />
            </TableRow>

        </TableLayout>
    </FrameLayout>
</LinearLayout>