<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ViewProduct">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="412dp"
                android:layout_height="137dp"
                android:src="@drawable/imgproductos" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/tablaProductOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@drawable/pan1" />

                <TextView
                    android:id="@+id/product_one"
                    android:layout_width="282dp"
                    android:layout_height="match_parent"
                    android:text="@string/products_message_one" />

            </TableRow>

            <TableRow
                android:id="@+id/tablaProductTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@drawable/pan2" />

                <TextView
                    android:id="@+id/product_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/products_message_two" />
            </TableRow>

            <TableRow
                android:id="@+id/tablaProductoThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="139dp"
                    android:layout_height="match_parent"
                    tools:srcCompat="@drawable/pan3" />

                <TextView
                    android:id="@+id/product_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/products_message_three" />
            </TableRow>

        </TableLayout>
    </FrameLayout>
</LinearLayout>